--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,38 @@ header {
   /* color: white; */
 }
 
+a:link {
+  text-decoration: none;
+}
+
+.App-nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #39394a;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-transform: capitalize;
+  color: #f66a6a;
+  padding: 10px;
+  /* color: white; */
+}
+
+.App-nav input {
+  width: 100%;
+  padding: 5px 5px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
+.App-nav button {
+    position: relative;
+    height: 25px;
+    width: 100px;
+    font-size: 1em;
+    color: #f66a6a;
+    cursor: pointer;
+}
+
 /* header h1 {
   padding-top: 15px;
 } */
