--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,7 @@ ul {
   padding: 10px;
   border: 5px solid #9494a4;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  list-style-type: none;
 }
 
 p {
